--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,14 @@
         android:theme="@style/Theme.Project1"
         tools:targetApi="31">
         <activity
+            android:name=".EditProductActivity"
+            android:exported="false" />
+        <activity
             android:name=".AddListActivity"
             android:exported="false" />
         <activity
             android:name=".ListItem"
             android:exported="false" />
-
         <activity
             android:name=".JoinActivity"
             android:exported="false" />
